# pochitrain

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  QUICK_START.md  README.md  mypy.ini  pochi.py  pochi_train.py  pyproject.toml  quick_start.py  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md  refactor_request.md  test_request.md
changelogs/: 1.0.x.md  1.1.x.md  1.2.x.md  1.3.x.md  1.4.x.md  1.5.x.md  1.6.x.md  1.7.x.md  1.8.x.md  README.md
configs/: optuna_config.py  pochi_config.py  pochi_train_config.py  simple_config.py
configs/docs/: configuration.md
pochitrain/: __init__.py  early_stopping.py  pochi_dataset.py  pochi_predictor.py  pochi_trainer.py  simple_dataset.py  simple_trainer.py
pochitrain/api/: __init__.py  app.py  config.py  dependencies.py  schemas.py  serializers.py
pochitrain/api/docs/: client_usage.md
pochitrain/api/routers/: __init__.py  health.py  inference.py
pochitrain/benchmark/: __init__.py  aggregator.py  loader.py  models.py  runner.py  utils.py
pochitrain/cli/: __init__.py  arg_types.py  bench.py  cli_commons.py  export_onnx.py  infer_onnx.py  infer_trt.py  pochi.py  visualize_gradient.py
pochitrain/cli/commands/: __init__.py  convert.py  infer.py  optimize.py  serve.py  train.py
pochitrain/config/: __init__.py  pochi_config.py  sub_configs.py
pochitrain/core/: __init__.py  config.py  evaluator.py  registry.py  trainer.py
pochitrain/data/: __init__.py  datasets.py  loaders.py  transforms.py
pochitrain/docs/: benchmark.md  gpu_environment_setup.md
pochitrain/exporters/: __init__.py  base_csv_exporter.py
pochitrain/inference/: __init__.py  csv_exporter.py  execution_service.py  execution_types.py  interfaces.py  pipeline_strategy.py  result_exporter.py
pochitrain/inference/adapters/: __init__.py  engine_runtime_adapter.py  interfaces.py  onnx_runtime_adapter.py  pytorch_runtime_adapter.py  runtime_interface.py  trt_runtime_adapter.py
pochitrain/inference/benchmark/: __init__.py  env_name.py  result_builder.py  result_exporter.py
pochitrain/inference/services/: __init__.py  execution_service.py  interfaces.py  onnx_inference_service.py  pytorch_inference_service.py  result_export_service.py  trt_inference_service.py
pochitrain/inference/types/: __init__.py  benchmark_types.py  execution_types.py  orchestration_types.py  result_export_types.py  runtime_adapter_protocol.py
pochitrain/logging/: __init__.py  logger_manager.py
pochitrain/models/: __init__.py  pochi_models.py  simple_models.py
pochitrain/models/backbones/: __init__.py  base.py
pochitrain/onnx/: __init__.py  adapter.py  exporter.py  inference.py
pochitrain/optimization/: __init__.py  interfaces.py  objective.py  param_suggestor.py  result_exporter.py  study_manager.py
pochitrain/tensorrt/: __init__.py  adapter.py  calibrator.py  converter.py  inference.py  input_shape_resolver.py  int8_config.py
pochitrain/tensorrt/docs/: conversion_guide.md
pochitrain/training/: __init__.py  checkpoint_store.py  early_stopping.py  epoch_runner.py  evaluator.py  metrics_tracker.py  training_configurator.py  training_loop.py
pochitrain/training/layer_wise_lr/: __init__.py  interfaces.py  param_group_builder.py  resnet_layer_grouper.py
pochitrain/utils/: __init__.py  config_loader.py  directory_manager.py  inference_utils.py  json_utils.py  model_loading.py  timestamp_utils.py
pochitrain/validation/: __init__.py  base_validator.py  config_validator.py
pochitrain/validation/validators/: __init__.py  class_weights_validator.py  data_validator.py  device_validator.py  early_stopping_validator.py  layer_wise_lr_validator.py  optimizer_validator.py  scheduler_validator.py  training_validator.py  transform_validator.py
pochitrain/visualization/: __init__.py  gradient_tracer.py  metrics_exporter.py
pochitrain/visualization/tensorboard/: __init__.py  tb_writer.py
tests/: __init__.py  conftest.py  test_pochi_trainer.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_cli_smoke.py  test_integration.py  test_training_flow.py
tests/unit/: __init__.py
tests/unit/optimization/: test_objective.py  test_param_suggestor.py  test_result_exporter.py  test_study_manager.py
tests/unit/test_api/: __init__.py  test_routers.py  test_schemas.py  test_serializers.py
tests/unit/test_benchmark/: __init__.py  test_aggregator.py  test_loader.py  test_models.py  test_runner.py  test_utils.py
tests/unit/test_cli/: __init__.py  conftest.py  test_bench_cli.py  test_convert_cli.py  test_export_onnx_cli.py  test_infer_onnx.py  test_infer_trt.py  test_pipeline_consistency.py  test_pochi_cli.py  test_pochi_cli_infer.py  test_pochi_cli_train.py  test_serve_cli.py  test_visualize_gradient.py
tests/unit/test_config/: __init__.py  test_pochi_config.py  test_sub_configs.py
tests/unit/test_core/: __init__.py  conftest.py  test_checkpoint_store.py  test_early_stopping.py  test_edge_cases.py  test_empty_dataloader.py  test_epoch_runner.py  test_evaluator.py  test_inference_public_api.py  test_inference_result_exporter.py  test_layer_wise_lr.py  test_layer_wise_lr_modules.py  test_metrics_tracker.py  test_pochi_dataset.py  test_pochi_predictor.py  test_pochi_trainer.py  test_schedulers.py  test_training_configurator.py  test_training_loop.py
tests/unit/test_exporters/: __init__.py  test_base_csv_exporter.py
tests/unit/test_inference/: __init__.py  test_base_inference_service.py  test_benchmark_types.py  test_execution_service.py  test_onnx_inference_service.py  test_orchestration_types.py  test_pytorch_inference_service.py  test_result_export_service.py  test_runtime_adapters.py  test_trt_inference_service.py
tests/unit/test_logging/: __init__.py  test_logger_manager.py
tests/unit/test_models/: __init__.py  test_pochi_models.py
tools/: README.md  export_onnx.py  infer_onnx.py  optimize_hyperparams.py  visualize_gradient_trace.py
tools/benchmark/: aggregator.py  loader.py  models.py  run_benchmark.py  runner.py  suites.yaml  utils.py
(+35 files in other folders)
