[project]
name = "pochitrain"
version = "1.8.3"
description = "Simple CNN training framework for image classification"
readme = "README.md"
# Jetson (JetPack 6.2.1 / Python 3.10) で pip install -e . するため >=3.10 を維持.
# black/mypy の target は開発環境 (Python 3.13) に合わせている.
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "kurorosu" }
]

dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "numpy==1.26.1; python_version < '3.11'",
    "numpy>=2.4.1; python_version >= '3.11'",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.10.8",
    "pyyaml>=5.4.0",
    "colorlog>=6.0.0",
    "rich>=13.0.0",
    "optuna>=3.5.0",
    "plotly>=5.0.0",
    "matplotlib-fontja>=1.1.0",
    "pydantic>=2.0.0",
    "onnx>=1.14.0",
    "onnxscript>=0.1.0",
    "onnxruntime-gpu>=1.16.0",
    "tensorboard>=2.14.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[dependency-groups]
dev = [
    "black>=25.12.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "types-pyyaml>=6.0.12.20250915",
]

[project.scripts]
pochi = "pochitrain.cli.pochi:main"
export-onnx = "pochitrain.cli.export_onnx:main"
infer-onnx = "pochitrain.cli.infer_onnx:main"
infer-trt = "pochitrain.cli.infer_trt:main"
vis-grad = "pochitrain.cli.visualize_gradient:main"
bench = "pochitrain.cli.bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["benchmark_runs/", "work_dirs/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydocstyle]
convention = "google"
add-ignore = ["D212"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -n 6 --dist=worksteal"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
